[tool.poetry]
name = "random-radon-transformation"
version = "0.1.0"
description = "'iitp python project random_radon_transformation'"
authors = ["barysheva-anastasia"]
license = "'MIT'"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
